# spotify-showcase

./: .env.development  .eslintignore  .eslintrc.js  .gitignore  .graphqlrc.yml  .prettierignore  AUTHORIZATION.md  CODEOWNERS  LICENSE  README.md  codegen.ts  compose.yaml  docker-compose.yml  eslint.config.mjs  index.html  mocks.js  nodemon.json  package-lock.json  package.json  persisted-query-manifest.config.ts  pnpm-lock.yaml  server.ts  spotify.yaml  supergraph.graphql  tailwind.config.js  tsconfig.json  vite.config.ts
.apollo/: router-config.yaml
.codesandbox/: Dockerfile  tasks.json
client/: .babelrc  .env.development  .eslintrc.js  codegen.ts  index.html  jest.config.js  jest.config.ts  jest.polyfills.js  package-lock.json  package.json  schema.graphql  setupTests.ts  tailwind.config.js  tsconfig.json  types.bench.ts  vite.config.ts  vitest.config.ts
connector/: apollo.config.json  connector.graphql  playback.graphql  spotify.graphql  supergraph.yaml
coprocessor/: .gitignore  Cargo.toml  Dockerfile
coprocessor/src/: graceful_shutdown.rs  main.rs
docs/: authz-demo.md  enterprise-demo.md  graphos-readme.md  serverless-demo.md
k8s/: build_images.sh  create_secrets.sh  kong.yaml  kustomization.yaml  playback.yaml  router.yaml  spotify.yaml  supergraph.graphql
patches/: @apollo+client+3.8.1.patch  @graphql-tools+batch-execute+9.0.0.patch  @graphql-tools+code-file-loader+8.0.1.patch  @graphql-tools+delegate+10.0.0.patch  @graphql-tools+executor+1.1.0.patch  @graphql-tools+executor-graphql-ws+1.1.0.patch  @graphql-tools+executor-http+1.0.1.patch  (+14 more)
(+963 files in other folders)
