[package]
name = "coprocessor"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.6.20"
reqwest = { version = "0.11.20", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1.0.188", features = ["derive"] }
serde_json = "1.0.107"
tokio = { version = "1.29.1", features = ["macros", "rt-multi-thread", "signal"] }
tower-http = { version = "0.4.4", features = ["compression-br", "compression-gzip", "trace"] }
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.17", features = ["env-filter"] }
